--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,30 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Nombre+de+la+Fuente:wght@400;700&display=swap" rel="stylesheet">
+ <!-- Preconexión para optimizar la carga de la fuente -->
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <style>
+    body, html {
+      margin: 0;
+      height: 100%;
+    }
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #eb6418; /* Color de fondo */
+    }
+    .content {
+      text-align: center;
+      color: #fff; /* Color del texto */
+    }
+  </style>
 </head>
 <body>
+ 
   <app-root></app-root>
 </body>
 </html>
